[gd_scene load_steps=2 format=3 uid="uid://b6ea856dp1jnl"]

[ext_resource type="Script" path="res://scripts/gui/action_bar.gd" id="1_d0b88"]

[node name="action_bar" type="TabContainer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 43.0
grow_horizontal = 2
size_flags_horizontal = 3
tabs_visible = false
script = ExtResource("1_d0b88")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
metadata/_tab_index = 0

[node name="--spacer--" type="Control" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="btn_run_dr" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Launch Darkradiant for this mission. 

(DR path must be set in the paths settings.)"
focus_mode = 0
disabled = true
text = "Edit"

[node name="btn_pack_mission" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Create the pk4 package for this mission.  

(TDM path must be set in the paths settings.)"
focus_mode = 0
disabled = true
text = "Pack"

[node name="btn_test_pack" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Copy the pk4 into the test TDM, and launch it to test the pk4.

 (TDM test version path must be set in the paths settings.)"
focus_mode = 0
disabled = true
text = "Test"

[connection signal="pressed" from="HBoxContainer/btn_run_dr" to="." method="_on_btn_run_dr_pressed"]
[connection signal="pressed" from="HBoxContainer/btn_pack_mission" to="." method="_on_btn_pack_mission_pressed"]
[connection signal="pressed" from="HBoxContainer/btn_test_pack" to="." method="_on_btn_test_pack_pressed"]
